@@ -76,7 +76,8 @@
              inline-controls="false"
              on-collapsible-changed="vm.setBodyCollapsible(collapsible)"
              collapse="vm.collapseBody"
-             collapsed-height="200">
+             collapsed-height="200"
+             overflow-hysteresis="20">
       <markdown ng-model="vm.form.text"
                 read-only="!vm.editing()"
                 embeds-enabled="vm.feature('embed_media')">
